compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_tuple_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let #(a, secondValue) = #(1, 2)"
---
error: Invalid variable name
  ┌─ /src/one/two.rakun:1:10
  │
1 │ let #(a, secondValue) = #(1, 2)
  │          ^^^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: second_value
