compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_use_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1296
expression: "fn use_test(f) { f(Nil) }\npub fn main() { use useVar <- use_test() }"
---
----- SOURCE CODE
fn use_test(f) { f(Nil) }
pub fn main() { use useVar <- use_test() }

----- ERROR
error: Invalid argument name
  ┌─ /src/one/two.rakun:2:21
  │
2 │ pub fn main() { use useVar <- use_test() }
  │                     ^^^^^^ This is not a valid argument name

Hint: Argument names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: use_var
