compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_arity_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 798
expression: "fn go(x: List<a, b>) -> Int { 1 }"
---
----- SOURCE CODE
fn go(x: List<a, b>) -> Int { 1 }

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.rakun:1:10
  │
1 │ fn go(x: List<a, b>) -> Int { 1 }
  │          ^^^^^^^^^^ Expected 1 argument, got 2

Functions and constructors have to be called with their expected number
of arguments.
